# Mahjong-Tensu-Calculator

./: .gitignore  CMakeLists.txt  Tensukeisan.sln  Tensukeisan.vcxproj  Tensukeisan.vcxproj.filters
include/: Mahjong.h
src/: Mahjong.cpp  Tensu.cpp
x64/Debug/: Tensukeisan.exe.recipe  Tensukeisan.ilk  Tensukeisan.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Tensukeisan.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Tensukeisan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
